--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ html, body {
     background-color: #223344;
     margin-top: 20px;
     border-radius: 15px;
+    align-items: center;
+    color: white;
+    font-size: 80px;
+    justify-content: center;
 }
 
 .button-container {
